@@ -1,5 +1,5 @@
 @echo off
 
-call builddebug.bat
+call buildrelease.bat
 
 copy ..\build\asset_builder.exe ..\client
